--- a/css/thEstilo.css
+++ b/css/thEstilo.css
@@ -9,12 +9,12 @@
 }
 .diaGris{
     font-weight: bold;
-    color:#FC7323;
+    color:#00B100;
     font-size:13px;
 }
 .semana{
     font-weight: bold;
-    background-color:#FC7323;
+    background-color:#00B100;
     color:white;
     font-size:13px;
     border: 0px solid black;
